# python-problem

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/pkgs/auth/: pytest.ini  supabase_tables.sql
backend/pkgs/auth/ppauth/: __init__.py
backend/pkgs/auth/ppauth/app/: __init__.py  dependencies.py
backend/pkgs/auth/ppauth/usecase/: __init__.py  create_user_usecase.py  delete_user_usecase.py  read_user_aggregate_usecase.py  read_user_by_email_usecase.py  read_user_by_id_usecase.py  read_user_usecase.py  read_user_usecase_new.py  read_users_by_role_usecase.py  update_user_usecase.py  user_types.py
backend/pkgs/auth/tests/: conftest.py  test_create_user_usecase.py  test_delete_user_usecase.py  test_integration.py  test_read_user_usecase.py  test_update_user_usecase.py  test_user_service.py
backend/pkgs/core/ppcore/infra/: __init__.py
backend/pkgs/core/tests/: test_supabase.py
backend/pkgs/edutorial-system/: edutorial.py
backend/pkgs/judge-system/: judge_case_repository_impl.py  judge_service.py  test_judge_repository.py  test_judge_usecase.py
backend/pkgs/judge-system/ppjudg/: __init__.py
backend/pkgs/judge-system/ppjudg/app/: container.py  controllers.py  handlers.py
backend/pkgs/judge-system/tests/: test_core_integration.py  test_judge_integration.py
backend/pkgs/problem-system/: book_repository_impl.py  book_service.py  container.py  content_repository_impl.py  controllers.py  models.py  problem.py  problem_repository.py  problem_repository_impl.py  problem_service.py  router.py  services.py
backend/pkgs/seed/ppseed/: sample_data.py  seeder.py
backend/pkgs/seed/tests/: test_seeder.py
backend/src/: __init__.py  const.py  env.py  main.py
backend/src/utils/: __init__.py  logging.py  storage.py
judge-system/: .env.example  pyproject.toml
judge-system/pkg/core/core/: __init__.py
judge-system/pkg/core/tests/: conftest.py  conftest_old.py
judge-system/pkg/jdg/tests/: test_core_integration.py  test_judge_integration.py
judge-system/pkg/seed/seed/: seeder.py
judge-system/src/: __init__.py  const.py  env.py  main.py
judge-system/src/app/: router.py
judge-system/src/core/: __init__.py
judge-system/src/core/api/: routes.py
judge-system/src/core/app/: __init__.py  container.py  services.py
judge-system/src/core/domain/: models.py
judge-system/src/domain/: models.py
judge-system/src/domain/services/: judge_service.py
judge-system/src/infra/repositories/: judge_repository.py
judge-system/src/jdg/app/: __init__.py  container.py
judge-system/src/jdg/domain/: models.py
judge-system/src/jdg/infra/: __init__.py
judge-system/src/jdg/usecase/: __init__.py  code_execution_use_case.py  judge_worker_use_case.py
judge-system/src/seed/: __init__.py  test_seeder.py
judge-system/src/shared/: __init__.py  auth.py  cache.py  database.py  events.py
judge-system/src/use_case/: judge.py  judge_use_case.py  submission_log.py  user_status.py
judge-system/src/usecase/: judge_use_case.py  submission_log.py  user_status.py
judge-system/src/utils/: __init__.py  cache.py  logging.py  storage.py
judge-system/tests/: conftest.py  test_system_integration.py
judge-system/tests/core/: __init__.py
judge-system/tests/core/app/: test_controllers.py  test_services.py
judge-system/tests/core/domain/: test_models.py  test_repository_base.py
judge-system/tests/core/usecase/: test_judge_usecase.py
judge-system/tests/domain/services/: test_judge_service.py
judge-system/tests/infra/repositories/: test_judge_repository.py
judge-system/tests/use_case/: test_judge.py  test_judge_use_case.py
judge-system/tests/usecase/: test_judge_use_case.py
(+157 files in other folders)
