[tool.poetry]
name = "backend"
version = "0.2.0"
description = ""
authors = ["nodashin <nodashin.jpn@gmail.com>"]
packages = [
    {include = "src"},
    {include = "ppcore", from = "pkgs/core"},
    {include = "ppauth", from = "pkgs/auth"},
    {include = "ppjudg", from = "pkgs/judge-system"},
    {include = "ppprob", from = "pkgs/problem-system"},
    {include = "ppedut", from = "pkgs/edutorial-system"},
    {include = "ppseed", from = "pkgs/seed"},
]

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.115.12"
pydantic = {extras = ["email"], version = "^2.11.5"}
uvicorn = "^0.34.2"
PyYAML = "^6.0.2"
pytest = "^8.3.5"
supabase = "^2.15.1"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"
pydantic-ddd-interface = "^0.2.0"
packaging = "^25.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pytest-asyncio = "^1.0.0"

[tool.ruff]
# ターゲットPythonバージョン
target-version = "py312"

# 除外するディレクトリ
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__pycache__",
]

# 1行の最大文字数
line-length = 108

# インデントサイズ
indent-width = 4

[tool.ruff.lint]
# 有効にするルール
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "PL",  # pylint
    "RUF", # ruff-specific rules
]

# 無視するルール
ignore = [
    "E501",    # line too long (line-lengthで管理) 
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "B008",    # do not perform function calls in argument defaults
    "F401",  # module imported but unused
    "F841",  # local variable is assigned to but never used
    "RUF022", # sorting __all__
    "SIM102", # nested if
]

# ディレクトリごとのルール設定
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",     # テストファイルでは未使用引数を許可
    "PLR2004", # テストファイルではマジックナンバーを許可
    "S101",    # テストファイルではassertを許可
    "F401",    # テストファイルでは未使用importを許可
]
"**/__init__.py" = [
    "F401",    # __init__.pyでは未使用importを許可
]



[tool.ruff.format]
# クォートスタイル
quote-style = "double"

# インデントスタイル
indent-style = "space"

# 末尾のカンマ
skip-magic-trailing-comma = false

# 文字列の正規化
docstring-code-format = true

[tool.ruff.lint.isort]
# importの並び順設定
known-first-party = ["src", "ppcore", "ppauth", "ppjudg", "ppprob", "ppedut", "ppseed"]
split-on-trailing-comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


