[tool.poetry]
name = "judge-system"
version = "0.2.0"
description = ""
authors = ["nodashin <nodashin.jpn@gmail.com>"]
packages = [
    {include = "src"},
    {include = "core", from = "pkg/core"},
    {include = "jdg", from = "pkg/jdg"},
    {include = "seed", from = "pkg/seed"},
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
pydantic = "^2.11.4"
uvicorn = "^0.34.2"
PyYAML = "^6.0.2"
pytest = "^8.3.5"
supabase = "^2.15.1"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
